--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,17 @@ services:
       - ./bs_draft_app:/usr/src/app/
     ports:
       - 8001:8000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
+  db:
+    image: postgres:15
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
     environment:
-      - DEBUG = 1
-      - SECRET_KEY = 05sd9uvg9e83r4hw0823rfhe843
-      - ALLOWED_HOSTS = localhost, 127.0.0.1
+      - POSTGRES_USER=marcin
+      - POSTGRES_PASSWORD=otyhaker
+      - POSTGRES_DB=power_draft
+volumes:
+  postgres_data:
