finally, docker uses the desktop context NOT on sudo, postgres data persists after destryoing container. made a dump in case everything breaks again...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,13 @@ services:
     depends_on:
       - db
   db:
+    container_name: postgres
     image: postgres:15
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=marcin
       - POSTGRES_PASSWORD=otyhaker
       - POSTGRES_DB=power_draft
 volumes:
-  postgres_data:
+  postgres-data:
