wr can be updated in the background, big W, needs some refactoring tho, it messes up the page during its runtime lmao

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     depends_on:
       - db
       - redis
+    command: celery --app=power_draft worker -l INFO 
+
   db:
     container_name: postgres
     image: postgres:15
